--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="/public/site.css">
+	<link rel="stylesheet" type="text/css" href="/public/style.css">
 </head>
 <body>
-	Welcome to the game page
+	<div id="root"></div>
 	<script src="/public/js/engine.js"></script>
 </body>
 </html>
