split game into ECS and made a minimal demo

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 	<div id="root"></div>
+	<div>WASD moves the "player" square</div>
 	<script src="/public/js/engine.js"></script>
 </body>
 </html>
