added a docs folder to host the github pages page, changed the paths of the css and js files

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="/public/style.css">
+	<link rel="stylesheet" type="text/css" href="public/style.css">
 </head>
 <body>
 	<div id="root"></div>
 	<div>WASD moves the "player" square</div>
-	<script src="/public/js/engine.js"></script>
+	<script src="public/js/engine.js"></script>
 </body>
 </html>
