made play instructions a bit clearer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div id="root"></div>
-	<div>WASD moves the "player" square</div>
+	<h1>WASD moves the "player" square</h1>
 	<div>
 	<h1>MVP Game Engine</h1>
 	<h3>What is it?</h3>
