added touch controls

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 	<div id="root"></div>
-	<div>WASD moves the "player" square</div>
+	<div class="keyboard-controls">Move the player using WASD keys on the keyboard.</div>
+	<div class="touch-controls">Move the player using the virtual joystick at the bottom right of the game.</div>
 	<script src="public/js/engine.js"></script>
 </body>
 </html>
