--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 	<div id="root"></div>
-	<h1>WASD moves the "player" square</h1>
+	<h1 class="keyboard-controls">Move the player using WASD keys on the keyboard.</h1>
+	<h1 class="touch-controls">Move the player using the virtual joystick at the bottom right of the game.</h1>
 	<div>
 		<h1>MVP Game Engine</h1>
 		<h3>What is it?</h3>
