--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="public/style.css">
 </head>
 <body>
-	<div id="root"></div>
-	<div class="keyboard-controls control-instruction">Move the player using WASD keys on the keyboard.</div>
-	<div class="touch-controls control-instruction">Move the player using the virtual joystick at the bottom right of the game.</div>
-	<script src="public/js/engine.js"></script>
+    <a href='lessons/intro'>Lesson 1: ECS basics</a>
+    <a href='lessons/timers'>Lesson 2: Timers and scheduling</a>
 </body>
 </html>
