fixed some paths to make hosting on github pages easier

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="public/style.css">
 </head>
 <body>
-    <a href='lessons/intro'>Lesson 1: ECS basics</a>
-    <a href='lessons/timers'>Lesson 2: Timers and scheduling</a>
+    <a href='public/intro'>Lesson 1: ECS basics</a>
+    <a href='public/timers'>Lesson 2: Timers and scheduling</a>
 </body>
 </html>
