added collision detection feature and lession, partially done

--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,6 @@
 <body>
     <a href='public/intro'>Lesson 1: ECS basics</a>
     <a href='public/timers'>Lesson 2: Timers and scheduling</a>
+    <a href='public/collision'>Lesson 3: Collision detection</a>
 </body>
 </html>
