fixed links in index

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="public/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <a href='public/intro'>Lesson 1: ECS basics</a>
-    <a href='public/timers'>Lesson 2: Timers and scheduling</a>
-    <a href='public/collision'>Lesson 3: Collision detection</a>
+    <a href='intro'>Lesson 1: ECS basics</a>
+    <a href='timers'>Lesson 2: Timers and scheduling</a>
+    <a href='collision'>Lesson 3: Collision detection</a>
 </body>
 </html>
