added setup page, completed 50% of the instructions there

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <a href='setup'>Lesson 0: Setup</a>
     <a href='intro'>Lesson 1: ECS basics</a>
     <a href='timers'>Lesson 2: Timers and scheduling</a>
     <a href='collision'>Lesson 3: Collision detection</a>
