fixed typo in setup instructions

--- a/public/setup/index.html
+++ b/public/setup/index.html
@@ -186,7 +186,7 @@ MainLoop.setUpdate(() => {
 &lt;/html&gt;</pre>
 		</p>
 		<p>
-			Now that the PixiJS container exist, we can go ahead and add the PixiJS code to our game, in the <code>src/engine.js</code> file.
+			Now that the PixiJS container exists, we can go ahead and add the PixiJS code to our game, in the <code>src/engine.js</code> file.
 			It should look something like this:
 			<pre class="codeblock">
 const MainLoop = require("mainloop.js");
