added some sentences in the 2nd article

--- a/public/intro/index.html
+++ b/public/intro/index.html
@@ -23,6 +23,14 @@
 			In ECS, all game objects are <em>entities</em> which are made up of multiple <em>components</em> attached to them that define their data and functionality.
 			The behavior of these components is managed by various <em>systems</em> that interact in various ways to implement the rules of the video game.
 			This way, we can attach components to entities at will, allowing us to create unique objects at runtime.
+			In addition, the components are loosely coupled, making them easy to reason about, reuse, and modify as they only have a small amount of functionality built in.
+		</p>
+		<h4>A basic example</h4>
+		<p>
+			Let's see how ECS works in action.
+		</p>
+		<p>
+			Let's see how ECS works in action.
 		</p>
 	</article>
 	<script src="js/engine.js"></script>
