some more additions

--- a/public/intro/index.html
+++ b/public/intro/index.html
@@ -30,7 +30,7 @@
 			Let's see how ECS works in action.
 		</p>
 		<p>
-			Let's see how ECS works in action.
+			We're going to make a simple "game" that consists of a colored square in a black background. The square should 
 		</p>
 	</article>
 	<script src="js/engine.js"></script>
